--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "test": "jest"
+    "test": "cross-env ENV=test jest"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,13 @@
     "mongoose": "^5.12.12"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.5.5",
+    "cross-env": "^7.0.3",
     "jest": "^27.0.4"
   }
 }
