--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node src/server.js",
-    "test": "cross-env ENV=test jest"
+    "test": "cross-env ENV=test jest --runInBand"
   },
   "repository": {
     "type": "git",
