--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/server.js",
+    "start": "cross-env ENV=dev nodemon --exec babel-node src/server.js",
     "test": "cross-env ENV=test jest --runInBand"
   },
   "repository": {
